// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-icon should render with _icons="fa-solid fa-user" _label="" 1`] = `
<kol-icon exportparts="icon">
  <template shadowrootmode="open">
    <i aria-hidden="true" class="fa-solid fa-user kol-icon kol-icon__icon" part="icon" role="presentation"></i>
  </template>
</kol-icon>
`;

exports[`kol-icon should render with _icons="kolicon-houses" _label="Home icon" 1`] = `
<kol-icon exportparts="icon">
  <template shadowrootmode="open">
    <i aria-label="Home icon" class="kol-icon kol-icon__icon kolicon-houses" part="icon" role="img"></i>
  </template>
</kol-icon>
`;
